Upgrade index.html

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Thalwil webGIS</title>
     <link rel="stylesheet" type="text/css" href="assets/css/qwc2.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/colorschemes.css" />
     <link rel="apple-touch-icon" href="assets/img/app_icon.png"/>
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/app_icon_72.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="assets/img/app_icon_114.png"/>
@@ -49,12 +50,13 @@
             }
         }
     </style>
+<!--    <script type="text/javascript" src="assets/searchProviders.js" ></script>-->
     <script type="text/javascript">
         window.addEventListener("load", function(ev) {
             document.getElementById('splash').style.display = 'none';
         }, false);
     </script>
-    <!--<script type="text/javascript" src="api_examples.js"></script>-->
+<!--    <script type="text/javascript" src="api_examples.js"></script>-->
 </head>
 <body>
 <div id="splash"><div class="lds-dual-ring"></div></div>
